--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<meta charset="utf-8">
+<title>달소프트</title>
+</head>
 <body>
   <img src="img/preparing.png" alt="dalsoft">
 </body>
