--- a/contactus.html
+++ b/contactus.html
@@ -184,7 +184,7 @@
 
     <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
     <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-kqqh07dAMdWtAGVCbc6BkK-Z0dmQkuk&callback=initMap" async defer></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-kqqh07dAMdWtAGVCbc6BkK-Z0dmQkuk&libraries=geometry,places"></script>
     <script src="https://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
     <script src="assets/plugins/gmaps/gmaps.js" type="text/javascript"></script>
     <script src="assets/pages/scripts/contact-us.js" type="text/javascript"></script>
