회사 홈페이지

--- a/menu/service/smartcontents.html
+++ b/menu/service/smartcontents.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
-<!--
-Template: Metronic Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-Version: 1.0.0
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
--->
+
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!-->
@@ -18,21 +9,10 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>Portfolio 2 Column | Metronic Frontend</title>
+  <title>스마트 콘텐츠</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <meta content="Metronic Shop UI description" name="description">
-  <meta content="Metronic Shop UI keywords" name="keywords">
-  <meta content="keenthemes" name="author">
-
-  <meta property="og:site_name" content="-CUSTOMER VALUE-">
-  <meta property="og:title" content="-CUSTOMER VALUE-">
-  <meta property="og:description" content="-CUSTOMER VALUE-">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="-CUSTOMER VALUE-"><!-- link to image for socio -->
-  <meta property="og:url" content="-CUSTOMER VALUE-">
 
   <link rel="shortcut icon" href="favicon.ico">
 
@@ -94,9 +74,9 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
               </a>
                 
               <ul class="dropdown-menu">
-                <li><a href="/menu/service/windows.html">윈도우 프로그램 개발</a></li>
+                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
                 <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
-                <li><a href="/menu/service/smartcontents.html">스마트 컨텐츠 제작</a></li>
+                <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
                 <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>             
               </ul>
             </li>
@@ -118,7 +98,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <div class="main">
       <div class="container">
         <ul class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="javascript:;">Service</a></li>
             <li class="active">Smart Contents Making</li>
         </ul>
@@ -128,10 +108,10 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
           <div class="col-md-12 col-sm-12">
             <h1>서비스</h1>
             <div class="content-page">
-			 <a class="btn" href="/menu/service/windows.html">프로그램 개발</a>
-			 <a class="btn" href="/menu/service/mobile.html">모바일 앱 개발</a>
-			 <a class="btn" href="/menu/service/smartcontents.html" style="color:#F29661">스마트 컨텐츠 제작</a>
-			 <a class="btn" href="/menu/service/multimedia.html">멀티미디어 제작</a>
+			 <a class="btn" href="/menu/service/software.html"><h4>프로그램 개발</h4></a>
+			 <a class="btn" href="/menu/service/mobile.html"><h4>모바일 앱 개발</h4></a>
+			 <a class="btn" href="/menu/service/smartcontents.html" style="color:#F29661"><h4>스마트 콘텐츠 제작</h4></a>
+			 <a class="btn" href="/menu/service/multimedia.html"><h4>멀티미디어 제작</h4></a>
                 <!-- BEGIN LEFT SIDEBAR -->            
                 <div class="col-md-12 col-sm-12 blog-posts">
                   <div class="row"><br><br>
