--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <meta content="Metronic Shop UI description" name="description">
-  <meta content="Metronic Shop UI keywords" name="keywords">
-  <meta content="keenthemes" name="author">
-
-  <meta property="og:site_name" content="-CUSTOMER VALUE-">
-  <meta property="og:title" content="-CUSTOMER VALUE-">
-  <meta property="og:description" content="-CUSTOMER VALUE-">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="-CUSTOMER VALUE-"><!-- link to image for socio -->
-  <meta property="og:url" content="-CUSTOMER VALUE-">
-
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
@@ -85,7 +74,7 @@
               </a>
                 
               <ul class="dropdown-menu">
-                <li><a href="/menu/service/windows.html">윈도우 프로그램 개발</a></li>
+                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
                 <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
                 <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
                 <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>             
@@ -133,7 +122,7 @@
                     <div class="container">
                         <div class="carousel-position-six">
                             <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/windows.html" style="color:white; text-decoration:none;">다양한 프로그램 개발</a>
+                                	<a href="/menu/service/software.html" style="color:white; text-decoration:none;">다양한 프로그램 개발</a>
                             </p>
                         </div>
                     </div>
@@ -159,7 +148,7 @@
                 <ul class="list-unstyled">
                   <li class="col-md-3">
                     <div class="thumbnail">
-                      <a href="/menu/service/windows.html"><img alt="Windows software" src="assets/pages/img/people/img1-large.jpg"></a>
+                      <a href="/menu/service/software.html"><img alt="Windows software" src="assets/pages/img/people/img1-large.jpg"></a>
                       <h3>
                         <strong>프로그램 개발</strong> 
                         <small>software</small>
