--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -8,21 +8,10 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>달소프트</title>
+  <title>CEO인삿말</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <meta content="Metronic Shop UI description" name="description">
-  <meta content="Metronic Shop UI keywords" name="keywords">
-  <meta content="keenthemes" name="author">
-
-  <meta property="og:site_name" content="-CUSTOMER VALUE-">
-  <meta property="og:title" content="-CUSTOMER VALUE-">
-  <meta property="og:description" content="-CUSTOMER VALUE-">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="-CUSTOMER VALUE-"><!-- link to image for socio -->
-  <meta property="og:url" content="-CUSTOMER VALUE-">
 
   <link rel="shortcut icon" href="favicon.ico">
 
@@ -86,9 +75,9 @@
               </a>
                 
               <ul class="dropdown-menu">
-                <li><a href="/menu/service/windows.html">윈도우 프로그램 개발</a></li>
+                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
                 <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
-                <li><a href="/menu/service/smartcontents.html">스마트 컨텐츠 제작</a></li>
+                <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
                 <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>             
               </ul>
             </li>
@@ -109,7 +98,7 @@
     <div class="main">
       <div class="container">
         <ul class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="javascript:;">About</a></li>
             <li class="active">CEO인사말</li>
         </ul>
@@ -119,16 +108,16 @@
           <div class="col-md-12 col-sm-12">
             <h1>회사소개</h1>
             <div class="content-page">
-			 <a class="btn" href="/menu/service/introcom.html">회사소개</a>
-			 <a class="btn" href="/menu/service/greetingceo.html" style="color:#F29661">CEO인사말</a>
+			 <a class="btn" href="/menu/about/introcom.html"><h4>회사소개</h4></a>
+			 <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661"><h4>CEO인사말</h4></a>
             <div class="row">
             
             <div class="col-md-7 col-sm-7">
-            <h2> 안녕하세요.<br>주식회사 달소프트 대표이사 임용수입니다.</h2><br>
-            <p>달소프트는 날마다 새롭게 변화하고 있는 IT 시장에서 새로운 경험과 즐거움을 선사할 수 있는 방법을 찾기 위해 고민하고 노력하고 있습니다.</p>
-            <p>저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라 각종 영상과 애니메이션 콘티 제작, 기업 홍보 영상/뮤직비디오/공익 광고 등 멀티미디어 콘텐츠 제작도 하고 있습니다.</p>
-            <p>주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의 모습을 보여드리도록 하겠습니다.</p>
-            <p>감사합니다.</p>
+            <h2> 안녕하세요.<br>주식회사 달소프트 대표이사 임용수입니다.</h2><br><br>
+            <p class="pmaking">달소프트는 날마다 새롭게 변화하고 있는 IT 시장에서 새로운 경험과 즐거움을 선사할 수 있는 방법을 찾기 위해 고민하고 노력하고 있습니다.</p>
+            <p class="pmaking">저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라 각종 영상과 애니메이션 콘티 제작, 기업 홍보 영상/뮤직비디오/공익 광고 등 멀티미디어 콘텐츠 제작도 하고 있습니다.</p>
+            <p class="pmaking">주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의 모습을 보여드리도록 하겠습니다.</p>
+            <p class="pmaking">감사합니다.</p>
             </div>
             </div>
           </div>
