홈페이지 메이페이지 사진 변경 전

--- a/contactus.html
+++ b/contactus.html
@@ -55,7 +55,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                  ABOUT
                 
               </a>
@@ -69,7 +69,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                 SERVICE 
                 
               </a>
@@ -110,7 +110,8 @@
               <div class="row">
                 <div class="col-md-12">
                   <div id="map" class="gmaps margin-bottom-40" style="height:400px;"></div>
-                </div>     
+                  <p class="pmaking">가산 디지털 단지역 <img src="/assets/corporate/img/icons/train03.png">호선 하차 후  1번 출구에서 약 200m<br>가산 디지털 단지역 <img src="/assets/corporate/img/icons/train07.png">호선 하차 후 3번 출구에서 약 200m </p>
+                </div>   
               </div>
             </div>
           </div>
@@ -150,7 +151,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
