--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->          
@@ -54,7 +54,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                  ABOUT
                 
               </a>
@@ -68,7 +68,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                 SERVICE 
                 
               </a>
@@ -111,7 +111,7 @@
                     <div class="container">
                         <div class="carousel-position-six">
                             <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/smartcontents.html" style="color:white; text-decoration:none;">스마트 콘텐츠 터치툰</a>
+                                	<a href="/menu/service/smartcontents.html" class="aaction" >스마트 콘텐츠 터치툰</a>
                             </p>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                     <div class="container">
                         <div class="carousel-position-six">
                             <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/software.html" style="color:white; text-decoration:none;">다양한 프로그램 개발</a>
+                                	<a href="/menu/service/software.html" class="aaction">다양한 프로그램 개발</a>
                             </p>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
