--- a/menu/service/multimedia.html
+++ b/menu/service/multimedia.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->          
@@ -54,7 +54,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                  ABOUT
                 
               </a>
@@ -68,7 +68,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                 SERVICE 
                 
               </a>
@@ -123,10 +123,11 @@
                     </div>
                     <div class="col-md-8 col-sm-8">
                       <br>
-                      <h2>제작: 김지운감독</h2>
+                      <br><br>
+                      <h2>뮤직비디오, 기업홍보, 공익광고 등 </h2>
                       <br>
-                      <br><h4>뮤직비디오, 기업홍보, 공익광고 등 </h4>
-					  <br><a class="more" href="https://www.youtube.com/watch?v=Uy94uAB8HW8&feature=youtu.be"><h4>YouTube로 바로가기</h4></a>
+                      <br><a class="more" href="https://www.youtube.com/watch?v=Uy94uAB8HW8&feature=youtu.be"><h4>YouTube로 바로가기</h4></a>
+                      <br><h4>제작: 김지운감독</h4>
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -142,6 +143,9 @@
                             </div>
                             <div class="item">
                               <img alt="" src="/assets/pages/img/works/movie2.jpg">
+                            </div>
+                            <div class="item">
+                              <img alt="" src="/assets/pages/img/works/movie3.jpg">
                             </div>
                             <div class="item">
                               <img alt="" src="/assets/pages/img/works/story1.jpg">
@@ -162,10 +166,11 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
-                      <h2>제작: 오정호 콘텐츠 팀장</h2>
+                    <br><br><br><br><br>
+                      <h2>영화 및 애니메이션 콘티</h2>
                       <br>
-                      <br><p><h4>영화 및 애니메이션</h4>
-					  <br><h4>스토리보드 제작</h4>
+                      <br><br><br><p><h4>제작 | 오정호 콘텐츠 팀장</h4>
+					  <br><h4></h4>
                     </div>
                   </div>
                   <hr class="blog-post-sep">            
@@ -210,7 +215,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
