--- a/menu/service/smartcontents.html
+++ b/menu/service/smartcontents.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->          
@@ -54,7 +54,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                  ABOUT
                 
               </a>
@@ -68,7 +68,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                 SERVICE 
                 
               </a>
@@ -119,8 +119,11 @@
                       <img class="img-responsive" alt="" src="/assets/pages/img/works/touch1.jpg">
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br>
                       <h2>터치툰</h2><br><br>
-                      <p>터치툰은 다양한 모바일 기기에서 적용 할수 있는 재생이 <br><br>가능한 뷰어를 제공하여 제작된 콘텐츠가 스마트 기기 및 <br><br>PC에 제한없이 재생되는 것이 가능합니다.</p>
+                      <div class="smartcontent">
+                      <p class="pmaking">터치툰은 다양한 모바일 기기에서 적용 할수 있는 재생이 가능한 뷰어를 제공하여 제작된 콘텐츠가 스마트 기기 및 PC에 제한없이 재생되는 것이 가능합니다.</p>
+                      </div>
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -129,8 +132,11 @@
                       <img class="img-responsive" alt="" src="/assets/pages/img/works/touch2.jpg">
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br>
                       <h2>터치툰 스튜디오</h2><br><br>
-                      <p>터치툰 스튜디오는 터치툰의 효율적인 제작을 위한 전문 <br><br>저작도구로 기존 플래시, 프리미어와는 다르게 연출을 <br><br>중심으로 한 콘텐츠의 제작과 직관적인 UI를 제공합니다.</p>
+                      <div class="smartcontent">
+                      <p class="pmaking">터치툰 스튜디오는 터치툰의 효율적인 제작을 위한 전문 저작도구로 기존 플래시, 프리미어와는 다르게 연출을 중심으로 한 콘텐츠의 제작과 직관적인 UI를 제공합니다.</p>
+                      </div>
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -139,8 +145,11 @@
                       <img class="img-responsive" alt="" src="/assets/pages/img/works/touch3.jpg">
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br>
                       <h2>터치툰 클라우드</h2><br><br>
-                      <p>터치툰 콘텐츠 데이터를 웹으로 업로드하고 관리 / 배포 <br><br>가능한 클라우드입니다.</p>
+                      <div class="smartcontent">
+                      <p class="pmaking">터치툰 콘텐츠 데이터를 웹으로 업로드하고 관리 / 배포 가능한 클라우드입니다.</p>
+                      </div>
                     </div>
                   </div>
                   <hr class="blog-post-sep">          
@@ -185,7 +194,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
