--- a/menu/service/software.html
+++ b/menu/service/software.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->          
@@ -54,7 +54,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                  ABOUT
                 
               </a>
@@ -68,7 +68,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle">
                 SERVICE 
                 
               </a>
@@ -99,8 +99,8 @@
       <div class="container">
         <ul class="breadcrumb">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="javascript:;">service</a></li>
-            <li class="active">software</li>
+            <li><a href="javascript:;">Service</a></li>
+            <li class="active">Software</li>
         </ul>
         <!-- BEGIN SIDEBAR & CONTENT -->
         <div class="row margin-bottom-40">
@@ -112,7 +112,6 @@
 			 <a class="btn" href="/menu/service/mobile.html"><h4>모바일 앱 개발</h4></a>
 			 <a class="btn" href="/menu/service/smartcontents.html"><h4>스마트 콘텐츠 제작</h4></a>
 			 <a class="btn" href="/menu/service/multimedia.html"><h4>멀티미디어 제작</h4></a>
-              <div class="row">
                 <!-- BEGIN LEFT SIDEBAR -->            
                 <div class="col-md-12 col-sm-12 blog-posts">
                   <div class="row"><br><br>
@@ -147,8 +146,9 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br><br><br><br>
                       <h2>ISMS 프로그램 개발</h2>
-                      <br>
+                      <br><br>
                       <br><p><b>설명:</b><br>위험 관리 솔루션 개발  
 					  <br><br><b>개발환경:</b><br>WPF / Visual Studio</p>
                     </div>
@@ -180,8 +180,9 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br><br><br><br>
                       <h2>NH Gift 고객 명단 프로그램</h2>
-                      <br>
+                      <br><br>
                       <br><p><b>설명:</b><br>농협 고객 정보 엑셀 편집 프로그램 개발    
 					  <br><br><b>개발환경:</b><br>WPF / C#</p>
                     </div>
@@ -213,8 +214,9 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br><br><br><br>
                       <h2>저작권위원회 소프트웨어 UI 작업</h2>
-                      <br>
+                      <br><br>
                       <br><p><b>설명:</b><br>MFC UI / UX 작업  
 					  <br><br><b>개발환경:</b><br>MFC / C++ / SQLite</p>
                     </div>
@@ -246,8 +248,9 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br><br><br><br>
                       <h2>코드마인드 디벨로퍼 UI/UX 작업</h2>
-                      <br>
+                      <br><br>
                       <br><p><b>설명:</b><br>코드마인드 디벨로퍼 UI/UX 설계 및 소프트웨어 구조 개선  
 					  <br><br><b>개발환경:</b><br>WPF / C# / JAVA / PRISM</p>
                     </div>
@@ -285,6 +288,7 @@
                       <!-- END CAROUSEL -->             
                     </div>
                     <div class="col-md-8 col-sm-8">
+                    <br><br><br><br>
                       <h2>TensorFlow 웹 컴파일러 및 페이지 개발</h2>
                       <br>
                       <br><p><b>설명:</b><br>구글에서 만든 딥 러닝과 머신 러닝 등에 활용하기 위해 개발된 오픈소스 소프트웨어인 텐서플로를 입문자들이 쉽게 배울 수 있도록 강좌와 실제 소프트웨어 사용 연동 등을 할 수 있는 웹 페이지 및 웹 컴파일러 개발   
@@ -295,7 +299,6 @@
                 </div>
                 <!-- END LEFT SIDEBAR -->            
               </div>
-            </div>
           </div>
           <!-- END CONTENT -->
         </div>
@@ -334,7 +337,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
