--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->          
@@ -55,7 +55,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle" >
                  ABOUT
                 
               </a>
@@ -69,7 +69,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <a class="dropdown-toggle" >
                 SERVICE 
                 
               </a>
@@ -160,7 +160,7 @@
           </div>
           <!-- END COPYRIGHT -->
           <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4" align="center">
              2017 © Dalsoft. ALL Rights Reserved.  
           </div>
           <!-- END PAYMENTS -->
