--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
               </a>
 
-              <ul class="dropdown-menu" data-toggle="dropdown" data-target="#" href="javascript:;">
+              <ul class="dropdown-menu">
                 <li><a href="/menu/about/introcom.html">회사소개</a></li>
                 <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
               </ul>
@@ -68,7 +68,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle">
+              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
                 SERVICE
 
               </a>
