--- a/menu/service/mobile.html
+++ b/menu/service/mobile.html
@@ -53,8 +53,8 @@
         <!-- BEGIN NAVIGATION -->
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
-            <li class="dropdown" data-toggle="dropdown" data-target="#" href="javascript:;">
-              <a class="dropdown-toggle">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
                  ABOUT
 
               </a>
