팀장-> 감독 수정

--- a/menu/service/multimedia.html
+++ b/menu/service/multimedia.html
@@ -169,7 +169,7 @@
                     <br><br><br><br><br>
                       <h2>영화 및 애니메이션 콘티</h2>
                       <br>
-                      <br><br><br><p><h4>제작 | 오정호 콘텐츠 팀장</h4>
+                      <br><br><br><p><h4>제작 | 오정호 콘텐츠 감독</h4>
 					  <br><h4></h4>
                     </div>
                   </div>
