연혁과 피피티 다운로드 추가

--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -60,6 +60,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/menu/about/introcom.html">회사소개</a></li>
                 <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
+                <li><a href="/menu/about/history.html">연혁</a></li>
               </ul>
             </li>
 
@@ -106,6 +107,7 @@
             <div class="content-page">
 			 <a class="btn" href="/menu/about/introcom.html"><h4>회사소개</h4></a>
 			 <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661"><h4>CEO인사말</h4></a>
+       <a class="btn" href="/menu/about/greetingceo.html"><h4>연혁</h4></a>
             <div class="row">
 
             <div class="col-md-7 col-sm-7">
