--- a/contactus.html
+++ b/contactus.html
@@ -63,6 +63,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/menu/about/introcom.html">회사소개</a></li>
                 <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
+                <li><a href="/menu/about/history.html">연혁</a></li>
               </ul>
             </li>
 
