--- a/menu/about/history.html
+++ b/menu/about/history.html
@@ -107,7 +107,7 @@
             <div class="content-page">
 			 <a class="btn" href="/menu/about/introcom.html"><h4>회사소개</h4></a>
 			 <a class="btn" href="/menu/about/greetingceo.html"><h4>CEO인사말</h4></a>
-			 <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661"><h4>연혁</h4></a>
+			 <a class="btn" href="/menu/about/history.html" style="color:#F29661"><h4>연혁</h4></a>
 		  </div>
 
             <div class="col-md-7 col-sm-7">
