--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -108,11 +108,11 @@
           <!-- BEGIN CONTENT -->
           <div class="col-md-12 col-sm-12">
             <h1>회사소개</h1>
-            <div class="content-page">
+     <div class="content-page">
 			 <a class="btn" href="/menu/about/introcom.html" style="color:#F29661"><h4>회사소개</h4></a>
 			 <a class="btn" href="/menu/about/greetingceo.html"><h4>CEO인사말</h4></a>
-       <a class="btn" href="/menu/about/greetingceo.html"><h4>연혁</h4></a>
-            <div class="row">
+       <a class="btn" href="/menu/about/history.html"><h4>연혁</h4></a>
+     </div>
 
             <div class="col-md-9 col-sm-9">
             <h2><b>About DalSoft</b></h2><br><br>
@@ -126,8 +126,6 @@
             <div class ="col-md-3 col-sm-3">
             <a class="btn btn-primary" href="/menu/introDal.pptx" download><h4 style="color:white;">Dalsoft소개 PPT</h4></a>
             </div>
-            </div>
-           </div>
           </div>
          </div>
        </div>
