--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -107,8 +107,8 @@
             <div class="content-page">
 			 <a class="btn" href="/menu/about/introcom.html"><h4>회사소개</h4></a>
 			 <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661"><h4>CEO인사말</h4></a>
-       <a class="btn" href="/menu/about/greetingceo.html"><h4>연혁</h4></a>
-            <div class="row">
+       <a class="btn" href="/menu/about/history.html"><h4>연혁</h4></a>
+       </div>
 
             <div class="col-md-7 col-sm-7">
             <h2>주식회사 달소프트 대표이사 임용수입니다.</h2><br><br>
@@ -117,8 +117,7 @@
             <p class="pmaking">주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의 모습을 보여드리도록 하겠습니다.</p>
             <p class="pmaking">지켜봐주십시오.<br>감사합니다.</p>
             </div>
-            </div>
-          </div>
+
           </div>
           <!-- END CONTENT -->
           </div>
