--- a/menu/about/history.html
+++ b/menu/about/history.html
@@ -112,19 +112,19 @@
 
             <div class="col-md-7 col-sm-7">
             <h2><b>History of Dalsoft</b></h2><br><br>
-            <p class="pmaking">2018.<br>
+            <p class="pmaking"><b>2018.</b><br>
 2018.01. 터치툰 웹 솔루션 구축 중<br>
 2018.01. 엘튜브 특허검색솔루션 사이트 구축 중 <br>
 <br>
-2017. <br>
+<b>2017.</b><br>
 2017.12. 한국기술교육대학교 TensorFlow 웹 이러닝 사이트 구축<br>
 2017.10. 코드마인드 CMDev 윈도우 프로그램 설계 및 UI/UX 공급<br>
 2017.09. 한국저작권위원회 응용소프트웨어 UI/UX 공급<br>
 <br>
-2016. <br>
+<b>2016.</b><br>
 2016.10. 벤처기업 인증 획득<br>
 <br>
-2010~2015.<br>
+<b>2010~2015.</b><br>
 
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 문화제청 이러닝 콘텐츠 납품<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 방송통신대학교 이러닝 콘텐츠 제작 및 검수 납품<br>
