ppt-> pdf파일로 변경

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Fonts START -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->
@@ -112,7 +112,7 @@
                     <div class="container">
                         <div class="carousel-position-six">
                             <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/smartcontents.html" class="aaction" >스마트 콘텐츠 터치툰</a>
+                                	<a href="/menu/service/smartcontents.html" style="text-decoration:none;color:white; ">스마트 콘텐츠 터치툰</a>
                             </p>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                     <div class="container">
                         <div class="carousel-position-six">
                             <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/software.html" class="aaction">다양한 프로그램 개발</a>
+                                	<a href="/menu/service/software.html" style="text-decoration:none;color:white;">다양한 프로그램 개발</a>
                             </p>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="thumbnail">
                       <a href="/menu/service/software.html"><img alt="Windows software" src="assets/pages/img/people/img1-large.jpg"></a>
                       <h3>
-                        <strong>프로그램 개발</strong>
+                        <a href="/menu/service/software.html" style="text-decoration:none"><strong>프로그램 개발</strong></a>
                         <small>software</small>
                       </h3>
                       <p>윈도우즈, OS 상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
@@ -161,7 +161,7 @@
                     <div class="thumbnail">
                       <a href="/menu/service/mobile.html"><img alt="Mobile Application" src="assets/pages/img/people/img4-large.jpg"></a>
                       <h3>
-                        <strong>모바일 앱 개발</strong>
+                        <a href="/menu/service/mobile.html" style="text-decoration:none"><strong>모바일 앱 개발</strong></a>
                         <small>Mobile Application</small>
                       </h3>
                       <p>iOS와 Android에서 동작 가능한 모바일 어플리케이션을 제작하여 제공합니다.</p>
@@ -171,7 +171,7 @@
                     <div class="thumbnail">
                       <a href="/menu/service/smartcontents.html"><img alt="Smart Contents Making" src="assets/pages/img/people/img2-large.jpg"></a>
                       <h3>
-                        <strong>스마트 컨텐츠 제작</strong>
+                        <a href="/menu/service/smartcontents.html" style="text-decoration:none"><strong>스마트 컨텐츠 제작</strong></a>
                         <small>Smart Contents Making</small>
                       </h3>
                       <p>다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
@@ -181,7 +181,7 @@
                     <div class="thumbnail">
                       <a href="/menu/service/multimedia.html"><img alt="Multimedia Making" src="assets/pages/img/people/img5-large.jpg"></a>
                       <h3>
-                        <strong>멀티미디어 제작</strong>
+                        <a href="/menu/service/multimedia.html" style="text-decoration:none"><strong>멀티미디어 제작</strong></a>
                         <small>Multimedia Making</small>
                       </h3>
                       <p>영상 제작에 관한 기획력과 기술력을 모두 갖춰 차별화된 영상을 제작하여 제공합니다.</p>
