--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -8,12 +8,16 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>CEO인삿말</title>
+  <title>회사소개</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <link rel="shortcut icon" href="favicon.ico">
+
+  <!-- Fonts START -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <!-- Fonts END -->
 
   <!-- Global styles START -->
   <link href="../../assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
