--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -124,7 +124,7 @@
 			<p class="pmaking"><b>Multimedia (Movie, Animation, Video) Making</b><br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖취 고객들이 원하는 차별화된 영상을 제작하여 제공합니다.</p>
             </div>
             <div class ="col-md-3 col-sm-3">
-            <a class="btn btn-primary" href="/menu/introDal.pptx" download><h4 style="color:white;">Dalsoft소개 PPT</h4></a>
+            <a class="btn btn-primary" href="/menu/introDal.pdf" download><h4 style="color:white;">Dalsoft소개 PDF</h4></a>
             </div>
           </div>
          </div>
