서비스 hr제거

--- a/menu/service/mobile.html
+++ b/menu/service/mobile.html
@@ -96,7 +96,7 @@
     </div>
     <!-- Header END -->
 
-    <div class="main">
+    <div class="main" style="margin-bottom:40px;">
       <div class="container">
         <ul class="breadcrumb">
             <li><a href="/index.html">Home</a></li>
@@ -248,7 +248,6 @@
                       <b>사운드 </b>| 그노컬트, 버블부스터<br>
                     </div>
                   </div>
-                  <hr class="blog-post-sep">
                 </div>
                 <!-- END LEFT SIDEBAR -->
             </div>
