--- a/menu/service/multimedia.html
+++ b/menu/service/multimedia.html
@@ -96,7 +96,7 @@
     </div>
     <!-- Header END -->
 
-    <div class="main">
+    <div class="main" style="margin-bottom:40px;">
       <div class="container">
         <ul class="breadcrumb">
             <li><a href="/index.html">Home</a></li>
@@ -171,10 +171,9 @@
                       <h2>영화 및 애니메이션 콘티</h2>
                       <br>
                       <br><br><br><p><h4>제작 | 오정호 콘텐츠 감독</h4>
-					  <br><h4></h4>
+					  <h4></h4>
                     </div>
                   </div>
-                  <hr class="blog-post-sep">
                 </div>
                 <!-- END LEFT SIDEBAR -->
             </div>
