--- a/menu/service/software.html
+++ b/menu/service/software.html
@@ -96,7 +96,7 @@
     </div>
     <!-- Header END -->
 
-    <div class="main">
+    <div class="main" style="margin-bottom:40px;">
       <div class="container">
         <ul class="breadcrumb">
             <li><a href="/index.html">Home</a></li>
@@ -150,8 +150,8 @@
                     <br><br><br><br>
                       <h2>ISMS 프로그램 개발</h2>
                       <br><br>
-                      <br><p><b>설명:</b><br>위험 관리 솔루션 개발
-					  <br><br><b>개발환경:</b><br>WPF / Visual Studio</p>
+                      <br><b>설명:</b><br>위험 관리 솔루션 개발
+					  <br><br><b>개발환경:</b><br>WPF / Visual Studio
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -184,8 +184,8 @@
                     <br><br><br><br>
                       <h2>NH Gift 고객 명단 프로그램</h2>
                       <br><br>
-                      <br><p><b>설명:</b><br>농협 고객 정보 엑셀 편집 프로그램 개발
-					  <br><br><b>개발환경:</b><br>WPF / C#</p>
+                      <br><b>설명:</b><br>농협 고객 정보 엑셀 편집 프로그램 개발
+					  <br><br><b>개발환경:</b><br>WPF / C#
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -218,8 +218,8 @@
                     <br><br><br><br>
                       <h2>저작권위원회 소프트웨어 UI 작업</h2>
                       <br><br>
-                      <br><p><b>설명:</b><br>MFC UI / UX 작업
-					  <br><br><b>개발환경:</b><br>MFC / C++ / SQLite</p>
+                      <br><b>설명:</b><br>MFC UI / UX 작업
+					  <br><br><b>개발환경:</b><br>MFC / C++ / SQLite
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -252,8 +252,8 @@
                     <br><br><br><br>
                       <h2>코드마인드 디벨로퍼 UI/UX 작업</h2>
                       <br><br>
-                      <br><p><b>설명:</b><br>코드마인드 디벨로퍼 UI/UX 설계 및 소프트웨어 구조 개선
-					  <br><br><b>개발환경:</b><br>WPF / C# / JAVA / PRISM</p>
+                      <br><b>설명:</b><br>코드마인드 디벨로퍼 UI/UX 설계 및 소프트웨어 구조 개선
+					  <br><br><b>개발환경:</b><br>WPF / C# / JAVA / PRISM
                     </div>
                   </div>
                   <hr class="blog-post-sep">
@@ -292,11 +292,10 @@
                     <br><br><br><br>
                       <h2>TensorFlow 웹 컴파일러 및 페이지 개발</h2>
                       <br>
-                      <br><p><b>설명:</b><br>구글에서 만든 딥 러닝과 머신 러닝 등에 활용하기 위해 개발된 오픈소스 소프트웨어인 텐서플로를 입문자들이 쉽게 배울 수 있도록 강좌와 실제 소프트웨어 사용 연동 등을 할 수 있는 웹 페이지 및 웹 컴파일러 개발
-					  <br><br><b>개발환경:</b><br>Meteor.JS / TensorFlow / Jupyter / TensorFlow Serving</p>
+                      <br><b>설명:</b><br>구글에서 만든 딥 러닝과 머신 러닝 등에 활용하기 위해 개발된 오픈소스 소프트웨어인 텐서플로를 입문자들이 쉽게 배울 수 있도록 강좌와 실제 소프트웨어 사용 연동 등을 할 수 있는 웹 페이지 및 웹 컴파일러 개발
+					  <br><br><b>개발환경:</b><br>Meteor.JS / TensorFlow / Jupyter / TensorFlow Serving
                     </div>
                   </div>
-                  <hr class="blog-post-sep">
                 </div>
                 <!-- END LEFT SIDEBAR -->
               </div>
