--- a/menu/service/smartcontents.html
+++ b/menu/service/smartcontents.html
@@ -96,7 +96,7 @@
     </div>
     <!-- Header END -->
 
-    <div class="main">
+    <div class="main" style="margin-bottom:40px;">
       <div class="container">
         <ul class="breadcrumb">
             <li><a href="/index.html">Home</a></li>
@@ -153,7 +153,6 @@
                       </div>
                     </div>
                   </div>
-                  <hr class="blog-post-sep">
                 </div>
                 <!-- END LEFT SIDEBAR -->
             </div>
