--- a/menu/about/history.html
+++ b/menu/about/history.html
@@ -56,7 +56,7 @@
         <div class="header-navigation pull-right font-transform-inherit">
           <ul>
             <li class="dropdown">
-              <a class="dropdown-toggle">
+              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
                  ABOUT
 
               </a>
@@ -71,7 +71,7 @@
 
 
             <li class="dropdown">
-              <a class="dropdown-toggle">
+              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
                 SERVICE
 
               </a>
