--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -121,7 +121,7 @@
 			<p class="pmaking"><b>Windows software</b><br>여러 분야의 다양한 작업들을 위한 윈도우 OS상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
 			<p class="pmaking"><b>Mobile Application</b><br>iOS와 Android에서 동작 가능한 모바일 앱을 고객들이 원하는 서비스와 UI / UX를 바탕으로 제작자와 사용자를 모두 만족할 수 있는 모바일 어플리케이션을 제작하여 제공합니다.</p>
 			<p class="pmaking"><b>Smart Content Making</b><br>웹과 모바일 상에서 다양한 인터렉션과 반응하여 움직이거나 재생할 수 있는 새로운 형식의 콘텐츠와 기존의 온라인 콘텐츠까지 다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
-			<p class="pmaking"><b>Multimedia (Movie, Animation, Video) Making</b><br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖취 고객들이 원하는 차별화된 영상을 제작하여 제공합니다.</p>
+			<p class="pmaking"><b>Multimedia (Movie, Animation, Video) Making</b><br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖춰 고객들이 원하는 차별화된 영상을 제작하여 제공합니다.</p>
             </div>
             <div class ="col-md-3 col-sm-3">
             <a class="btn btn-primary" href="/menu/introDal.pdf" download><h4 style="color:white;">Dalsoft소개 PDF</h4></a>
