대표 이름 및 이메일 원복

--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
       </div>
 
       <!-- Controls -->
-      <a class="left carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button"
-        data-slide="prev">
+      <a class="left carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic"
+        role="button" data-slide="prev">
         <i class="fa fa-angle-left" aria-hidden="true"></i>
       </a>
-      <a class="right carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button"
-        data-slide="next">
+      <a class="right carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic"
+        role="button" data-slide="next">
         <i class="fa fa-angle-right" aria-hidden="true"></i>
       </a>
     </div>
@@ -241,8 +241,8 @@
         <div>
           <h2>Our Contacts</h2>
           <address class="margin-bottom-40">
-            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
-            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
           </address>
         </div>
         <!-- END BOTTOM CONTACTS -->
