--- a/menu/service/smartcontents.html
+++ b/menu/service/smartcontents.html
@@ -160,7 +160,8 @@
                   <br>
                   <br>
                   <div class="smartcontent">
-                    <p class="pmaking">터치툰은 다양한 모바일 기기에서 적용 할수 있는 재생이 가능한 뷰어를 제공하여 제작된 콘텐츠가 스마트 기기 및 PC에 제한없이 재생되는 것이 가능합니다.</p>
+                    <p class="pmaking">터치툰은 다양한 모바일 기기에서 적용 할수 있는 재생이 가능한 뷰어를 제공하여 제작된 콘텐츠가 스마트 기기 및 PC에 제한없이 재생되는 것이
+                      가능합니다.</p>
                   </div>
                 </div>
               </div>
@@ -175,7 +176,8 @@
                   <br>
                   <br>
                   <div class="smartcontent">
-                    <p class="pmaking">터치툰 스튜디오는 터치툰의 효율적인 제작을 위한 전문 저작도구로 기존 플래시, 프리미어와는 다르게 연출을 중심으로 한 콘텐츠의 제작과 직관적인 UI를 제공합니다.</p>
+                    <p class="pmaking">터치툰 스튜디오는 터치툰의 효율적인 제작을 위한 전문 저작도구로 기존 플래시, 프리미어와는 다르게 연출을 중심으로 한 콘텐츠의 제작과 직관적인
+                      UI를 제공합니다.</p>
                   </div>
                 </div>
               </div>
@@ -214,8 +216,8 @@
         <div>
           <h2>Our Contacts</h2>
           <address class="margin-bottom-40">
-            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
-            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
           </address>
         </div>
         <!-- END BOTTOM CONTACTS -->
