--- a/menu/service/software.html
+++ b/menu/service/software.html
@@ -368,7 +368,8 @@
                   <br>
                   <br>
                   <b>설명:</b>
-                  <br>구글에서 만든 딥 러닝과 머신 러닝 등에 활용하기 위해 개발된 오픈소스 소프트웨어인 텐서플로를 입문자들이 쉽게 배울 수 있도록 강좌와 실제 소프트웨어 사용 연동 등을 할 수 있는 웹 페이지
+                  <br>구글에서 만든 딥 러닝과 머신 러닝 등에 활용하기 위해 개발된 오픈소스 소프트웨어인 텐서플로를 입문자들이 쉽게 배울 수 있도록 강좌와 실제 소프트웨어 사용 연동 등을 할 수
+                  있는 웹 페이지
                   및 웹 컴파일러 개발
                   <br>
                   <br>
@@ -396,8 +397,8 @@
         <div>
           <h2>Our Contacts</h2>
           <address class="margin-bottom-40">
-            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
-            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
           </address>
         </div>
         <!-- END BOTTOM CONTACTS -->
