--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -146,13 +146,15 @@
           </div>
 
           <div class="col-md-7 col-sm-7">
-            <h2>주식회사 달소프트 대표이사 김민호입니다.</h2>
+            <h2>주식회사 달소프트 대표이사 임용수입니다.</h2>
             <br>
             <br>
             <p class="pmaking">달소프트는 날마다 새롭게 변화하고 있는 IT 시장에서 새로운 경험과 즐거움을 선사할 수 있는 방법을 찾기 위해 고민하고 노력하고 있습니다.</p>
-            <p class="pmaking">저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라 각종 영상과 애니메이션 콘티 제작, 기업
+            <p class="pmaking">저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라
+              각종 영상과 애니메이션 콘티 제작, 기업
               홍보 영상/뮤직비디오/공익 광고 등 멀티미디어 콘텐츠 제작도 하고 있습니다.</p>
-            <p class="pmaking">주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의 모습을 보여드리도록 하겠습니다.</p>
+            <p class="pmaking">주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의
+              모습을 보여드리도록 하겠습니다.</p>
             <p class="pmaking">지켜봐주십시오.
               <br>감사합니다.</p>
           </div>
@@ -173,8 +175,8 @@
         <div>
           <h2>Our Contacts</h2>
           <address class="margin-bottom-40">
-            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
-            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
           </address>
         </div>
         <!-- END BOTTOM CONTACTS -->
