--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -151,7 +151,8 @@
             </h2>
             <br>
             <br>
-            <p class="pmaking">달소프트는 빠르게 변화하고 진화하고 있는 IT 시장에서 크리에이티브를 바탕으로 새로운 혁신을 꿈꾸는 기업입니다. 새롭게 변해가는 환경에서 도전적인 마인드와 열정적인 마인드를 바탕으로 항상 고객님께
+            <p class="pmaking">달소프트는 빠르게 변화하고 진화하고 있는 IT 시장에서 크리에이티브를 바탕으로 새로운 혁신을 꿈꾸는 기업입니다. 새롭게 변해가는 환경에서 도전적인 마인드와
+              열정적인 마인드를 바탕으로 항상 고객님께
               신뢰를 드릴 수 있는 기업으로 발전해 나갈 수 있도록 노력하겠습니다. </p>
             <h2>
               <b>Service</b>
@@ -163,13 +164,16 @@
               <br>여러 분야의 다양한 작업들을 위한 윈도우 OS상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
             <p class="pmaking">
               <b>Mobile Application</b>
-              <br>iOS와 Android에서 동작 가능한 모바일 앱을 고객들이 원하는 서비스와 UI / UX를 바탕으로 제작자와 사용자를 모두 만족할 수 있는 모바일 어플리케이션을 제작하여 제공합니다.</p>
+              <br>iOS와 Android에서 동작 가능한 모바일 앱을 고객들이 원하는 서비스와 UI / UX를 바탕으로 제작자와 사용자를 모두 만족할 수 있는 모바일 어플리케이션을 제작하여
+              제공합니다.</p>
             <p class="pmaking">
               <b>Smart Content Making</b>
-              <br>웹과 모바일 상에서 다양한 인터렉션과 반응하여 움직이거나 재생할 수 있는 새로운 형식의 콘텐츠와 기존의 온라인 콘텐츠까지 다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
+              <br>웹과 모바일 상에서 다양한 인터렉션과 반응하여 움직이거나 재생할 수 있는 새로운 형식의 콘텐츠와 기존의 온라인 콘텐츠까지 다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을
+              구축하여 제공합니다.</p>
             <p class="pmaking">
               <b>Multimedia (Movie, Animation, Video) Making</b>
-              <br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖춰 고객들이 원하는
+              <br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖춰
+              고객들이 원하는
               차별화된 영상을 제작하여 제공합니다.</p>
           </div>
           <div class="col-md-3 col-sm-3">
@@ -193,8 +197,8 @@
         <div>
           <h2>Our Contacts</h2>
           <address class="margin-bottom-40">
-            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
-            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
           </address>
         </div>
         <!-- END BOTTOM CONTACTS -->
